# azure-app-onboarding-portal

./: .env.example  .gitignore  .markdownlint.json  FIREWALL_REFACTOR_SUMMARY.md  README.md  TOOLTIP_IMPROVEMENTS.md  gunicorn.conf.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_firewall_integration.py
.github/workflows/: main_apponboard-prod-web-wsaq.yml  main_myprodapp.yml  webapp_deploy.yml
app/: __init__.py  api.py  api.py.backup  email_service.py  main.py  models.py  schemas.py  utils.py  validation.py  web.py  workflow_utils.py
app/core/: __init__.py  settings.py
app/repositories/: __init__.py  application_repository.py  audit_repository.py  base_repository.py  firewall_repository.py  lookup_repository.py
app/services/: __init__.py  application_service.py  auth_service.py  firewall_request_service.py  lookup_service.py  notification_service.py
app/templates/: 403.html  admin.html  admin_lookup.html  base.html  dashboard.html  firewall_request_form.html  firewall_request_form_v2.html  icons.html  index.html  login.html  request_detail.html  request_form.html  request_type_selector.html  requests.html
app/workflows/: __init__.py  base.py
app/workflows/firewall/: __init__.py  actions.py
app/workflows/onboarding/: __init__.py  actions.py
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  variables.tf
