[project]
name = "tradex-platform-onboarding"
version = "0.1.0"
description = "TradeX Platform Onboarding Portal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-cors>=4.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyodbc>=5.0.0",
    "gunicorn>=21.2.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = ["flask[async]", "watchdog>=3.0.0"]

[project.scripts]
dev = "flask --app app.main:app run --debug"

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
